fix drogarianet and adding a function on crawlerUtils
Former-commit-id: 79b3ecafdd6cadc3b97a0111f5ad8154f6ef696a