@@ -15,21 +15,23 @@ import br.com.lett.crawlernode.core.models.Product;
 import br.com.lett.crawlernode.core.models.ProductBuilder;
 import br.com.lett.crawlernode.core.session.Session;
 import br.com.lett.crawlernode.core.task.impl.Crawler;
+import br.com.lett.crawlernode.util.CommonMethods;
 import br.com.lett.crawlernode.util.CrawlerUtils;
 import br.com.lett.crawlernode.util.Logging;
 import br.com.lett.crawlernode.util.MathUtils;
+import br.com.lett.crawlernode.util.Pair;
 import models.Marketplace;
 import models.prices.Prices;
 
 /**
- * Date: 08/08/2017
+ * Date: 08/08/2017 - Remade date: 11/03/2019
  * 
  * @author Gabriel Dornelas
  *
  */
 public class BrasilDrogarianetCrawler extends Crawler {
 
-  private final String HOME_PAGE = "http://www.drogarianet.com.br";
+  private static final String HOME_PAGE = "http://www.drogarianet.com.br";
 
   public BrasilDrogarianetCrawler(Session session) {
     super(session);
@@ -49,29 +51,25 @@ public class BrasilDrogarianetCrawler extends Crawler {
     if (isProductPage(doc)) {
       Logging.printLogDebug(logger, session, "Product page identified: " + this.session.getOriginalURL());
 
-      String internalId = crawlInternalId(doc);
-      String internalPid = crawlInternalPid(doc);
-      String name = crawlName(doc);
+      String internalId = CrawlerUtils.scrapStringSimpleInfoByAttribute(doc, "input[name=product]", "value");
+      String internalPid = CrawlerUtils.scrapStringSimpleInfo(doc, ".product-sku > span", true);
+      String name = CrawlerUtils.scrapStringSimpleInfo(doc, ".product-name  h1", true);
       Float price = crawlPrice(doc, internalId);
       Prices prices = crawlPrices(price, doc);
-      boolean available = crawlAvailability(doc);
-      CategoryCollection categories = crawlCategories(doc);
-      String primaryImage = crawlPrimaryImage(doc);
-      String secondaryImages = CrawlerUtils.scrapSimpleSecondaryImages(doc, ".Pequenas div:not(:first-child) a", Arrays.asList("href"), "https:",
+      boolean available = !doc.select("#productForm .buy-form .-buy").isEmpty();
+      CategoryCollection categories = CrawlerUtils.crawlCategories(doc, ".breadcrumbs-tree li:not(:first-child) > a");
+      String primaryImage =
+          CrawlerUtils.scrapSimplePrimaryImage(doc, ".product-picture figure a", Arrays.asList("href"), "https", "www.drogarianet.com.br");
+      String secondaryImages = CrawlerUtils.scrapSimpleSecondaryImages(doc, ".product-picture figure a", Arrays.asList("href"), "https:",
           "www.drogarianet.com.br", primaryImage);
       String description = crawlDescription(doc);
-      Integer stock = null;
-      Marketplace marketplace = crawlMarketplace();
-
-      String ean = crawlEan(doc);
-      List<String> eans = new ArrayList<>();
-      eans.add(ean);
+      String ean = CrawlerUtils.scrapStringSimpleInfo(doc, "[itemprop=gtin13]", true);
 
       // Creating the product
       Product product = ProductBuilder.create().setUrl(session.getOriginalURL()).setInternalId(internalId).setInternalPid(internalPid).setName(name)
           .setPrice(price).setPrices(prices).setAvailable(available).setCategory1(categories.getCategory(0)).setCategory2(categories.getCategory(1))
           .setCategory3(categories.getCategory(2)).setPrimaryImage(primaryImage).setSecondaryImages(secondaryImages).setDescription(description)
-          .setStock(stock).setMarketplace(marketplace).setEans(eans).build();
+          .setMarketplace(new Marketplace()).setEans(Arrays.asList(ean)).build();
 
       products.add(product);
 
@@ -84,43 +82,7 @@ public class BrasilDrogarianetCrawler extends Crawler {
   }
 
   private boolean isProductPage(Document doc) {
-    if (doc.select(".PaginaProduto").first() != null) {
-      return true;
-    }
-    return false;
-  }
-
-  private String crawlInternalId(Document doc) {
-    String internalId = null;
-
-    Element internalIdElement = doc.select("input[name=product]").first();
-    if (internalIdElement != null) {
-      internalId = internalIdElement.val();
-    }
-
-    return internalId;
-  }
-
-  private String crawlInternalPid(Document doc) {
-    String internalPid = null;
-    Element pdi = doc.select(".Codigo span[itemprop=productid]").first();
-
-    if (pdi != null) {
-      internalPid = pdi.ownText().trim();
-    }
-
-    return internalPid;
-  }
-
-  private String crawlName(Document document) {
-    String name = null;
-    Element nameElement = document.select(".NomeProduto h1").first();
-
-    if (nameElement != null) {
-      name = nameElement.ownText().trim();
-    }
-
-    return name;
+    return doc.selectFirst(".product-page") != null;
   }
 
   private Float crawlPrice(Document document, String internalId) {
@@ -137,75 +99,11 @@ public class BrasilDrogarianetCrawler extends Crawler {
     return price;
   }
 
-  private Marketplace crawlMarketplace() {
-    return new Marketplace();
-  }
-
-
-  private String crawlPrimaryImage(Document doc) {
-    String primaryImage = null;
-    Element elementPrimaryImage = doc.select(".Fotos .Principal > a").first();
-
-    if (elementPrimaryImage != null) {
-      primaryImage = elementPrimaryImage.attr("href");
-    }
-
-    return primaryImage;
-  }
-
-  /**
-   * No momento que o crawler foi feito não foi achado produtos com categorias
-   * 
-   * @param document
-   * @return
-   */
-  private CategoryCollection crawlCategories(Document document) {
-    CategoryCollection categories = new CategoryCollection();
-    Elements elementCategories = document.select(".Navegacao li[itemprop] > a span");
-
-    for (int i = 0; i < elementCategories.size(); i++) {
-      String cat = elementCategories.get(i).ownText().trim();
-
-      if (!cat.isEmpty()) {
-        categories.add(cat);
-      }
-    }
-
-    return categories;
-  }
-
   private String crawlDescription(Document doc) {
     StringBuilder description = new StringBuilder();
 
-    Element elementDescription = doc.select(".BreveDescricao").first();
-
-    if (elementDescription != null) {
-      description.append(elementDescription.html());
-    }
-
-    Element elementInfo = doc.select("#Informacoes").first();
-
-    if (elementInfo != null) {
-      description.append(elementInfo.html());
-    }
-
-    Element elementCaract = doc.select("#Caracteristicas").first();
-
-    if (elementCaract != null) {
-      description.append(elementCaract.html());
-    }
-
-    Element elementAditional = doc.select("#InformacoesAdicionais").first();
-
-    if (elementAditional != null) {
-      description.append(elementAditional.html());
-    }
-
-    Element medico = doc.select(".MensagemMedicamento").first();
-
-    if (medico != null) {
-      description.append(medico.html());
-    }
+    description.append(CrawlerUtils.scrapElementsDescription(doc,
+        Arrays.asList(".product-short-description", ".product-page .product-section:not(:first-child):not(.-related):not(.-send-review)")));
 
     String apiUrl = null;
     Elements scripts = doc.select("script");
@@ -225,10 +123,6 @@ public class BrasilDrogarianetCrawler extends Crawler {
     return description.toString();
   }
 
-  private boolean crawlAvailability(Document doc) {
-    return doc.select(".Botao.Comprar").first() != null;
-  }
-
   /**
    * 
    * @param doc
@@ -240,48 +134,36 @@ public class BrasilDrogarianetCrawler extends Crawler {
 
     if (price != null) {
       prices.setBankTicketPrice(price);
+      prices.setPriceFrom(CrawlerUtils.scrapDoublePriceFromHtml(doc, "#productForm .product-price-regular span[id^=old-price-]", null, true, ','));
 
-      Element priceFrom = doc.select(".PrecoDe span[id]").first();
-      if (priceFrom != null) {
-        prices.setPriceFrom(MathUtils.parseDoubleWithComma(priceFrom.text()));
-      }
-
-      Elements cards = doc.select(".CartoesParcelamento .CartaoParcelamento");
+      Elements cards = doc.select("#productForm .installment-options .card-option");
 
       if (!cards.isEmpty()) {
         for (Element card : cards) {
           Map<Integer, Float> installmentPriceMap = new HashMap<>();
+
           Elements table = card.select("table tr");
 
           for (Element e : table) {
-            Elements colunas = e.select("td");
+            Pair<Integer, Float> pair = CrawlerUtils.crawlSimpleInstallment(null, e, false, "x", "total", true);
 
-            if (colunas.size() > 1) {
-              setInstallments(colunas, 0, 1, installmentPriceMap);
-
-              if (colunas.size() > 3) {
-                setInstallments(colunas, 2, 3, installmentPriceMap);
-              }
+            if (!pair.isAnyValueNull()) {
+              installmentPriceMap.put(pair.getFirst(), pair.getSecond());
             }
           }
 
           String cardOficialName = crawlCardName(card);
-
-          prices.insertCardInstallment(cardOficialName, installmentPriceMap);
+          if (cardOficialName != null) {
+            prices.insertCardInstallment(cardOficialName, installmentPriceMap);
+          }
         }
       } else {
         Map<Integer, Float> installmentPriceMap = new HashMap<>();
         installmentPriceMap.put(1, price);
 
-        Elements specialInstallment = doc.select(".AreaComprar .Parcelamento span");
-
-        if (specialInstallment.size() > 1) {
-          String installment = specialInstallment.get(0).ownText().replaceAll("[^0-9]", "").trim();
-          Float value = MathUtils.parseFloatWithComma(specialInstallment.get(1).ownText());
-
-          if (!installment.isEmpty() && value != null) {
-            installmentPriceMap.put(Integer.parseInt(installment), value);
-          }
+        Pair<Integer, Float> pair = CrawlerUtils.crawlSimpleInstallment("#productForm .product-installment", doc, false, "x", "", true);
+        if (!pair.isAnyValueNull()) {
+          installmentPriceMap.put(pair.getFirst(), pair.getSecond());
         }
 
         prices.insertCardInstallment(Card.VISA.toString(), installmentPriceMap);
@@ -296,63 +178,51 @@ public class BrasilDrogarianetCrawler extends Crawler {
   }
 
   private String crawlCardName(Element card) {
-    String cardOficialName = null;
-    Element name = card.select("> span").first();
+    String cardOficialName = CommonMethods.getLast(card.attr("class").split(" ")).trim();
 
-    if (name != null) {
-      String cardName = name.ownText().toLowerCase().trim();
+    switch (cardOficialName) {
+      case "-visa":
+        cardOficialName = Card.VISA.toString();
+        break;
 
-      switch (cardName) {
-        case "visa":
-          cardOficialName = Card.VISA.toString();
-          break;
+      case "-master-card":
+        cardOficialName = Card.MASTERCARD.toString();
+        break;
 
-        case "mastercard":
-          cardOficialName = Card.MASTERCARD.toString();
-          break;
+      case "-american-express":
+        cardOficialName = Card.AMEX.toString();
+        break;
 
-        case "american express":
-          cardOficialName = Card.AMEX.toString();
-          break;
+      case "-diners-club":
+        cardOficialName = Card.DINERS.toString();
+        break;
 
-        case "diners":
-          cardOficialName = Card.DINERS.toString();
-          break;
+      case "-elo":
+        cardOficialName = Card.ELO.toString();
+        break;
 
-        case "elo":
-          cardOficialName = Card.ELO.toString();
-          break;
+      case "-discover":
+        cardOficialName = Card.DISCOVER.toString();
+        break;
 
-        default:
-          break;
-      }
+      case "-hiper":
+        cardOficialName = Card.HIPER.toString();
+        break;
+
+      case "-hipercard":
+        cardOficialName = Card.HIPERCARD.toString();
+        break;
+
+      case "-aura":
+        cardOficialName = Card.AURA.toString();
+        break;
+
+      default:
+        cardOficialName = null;
+        break;
     }
 
 
     return cardOficialName;
-  }
-
-  private void setInstallments(Elements colunas, int indexInstallment, int indexValue, Map<Integer, Float> installmentPriceMap) {
-    String installmentText = colunas.get(indexInstallment).text().replaceAll("[^0-9]", "").trim();
-    Integer installment = installmentText.isEmpty() ? null : Integer.parseInt(installmentText);
-
-    String valueText = colunas.get(indexValue).text().replaceAll("[^0-9,]", "").replace(",", ".").trim();
-    Float value = valueText.isEmpty() ? null : Float.parseFloat(valueText);
-
-    if (installment != null && value != null) {
-      installmentPriceMap.put(installment, value);
-    }
-  }
-
-
-  private String crawlEan(Document doc) {
-    String ean = null;
-    Element e = doc.selectFirst("[itemprop=\"gtin13\"]");
-
-    if (e != null) {
-      ean = e.text().trim();
-    }
-
-    return ean;
   }
 }
